# uber_popug_task_tracker

./: .gitignore  alembic.ini  pyproject.toml
auth/: database.py  dependencies.py  kafka_producer.py  main.py  repository.py  routers.py  security.py  settings.py  tables.py  types.py
auth/migrations/: env.py
auth/migrations/versions/: 0b64126077c1_user_public_id.py  b1833f62eee9_token.py  dea101184bd1_on_delete_cascade.py
migrations/: env.py
migrations/versions/: 9d1b199b21db_initial.py  e88bbca6a8b8_token.py
task_tracker/: alembic.ini  database.py  dependencies.py  integrations.py  kafka_app.py  main.py  repository.py  routers.py  settings.py  tables.py  types.py
task_tracker/migrations/: env.py
task_tracker/migrations/versions/: 96c03e3d6990_description.py  c1639b1169bf_on_delete_cascade.py  e3c4c3816a9f_initial.py  faae0bdaeea2_initial.py
